@@ -13,11 +13,15 @@ dependencies {
     implementation 'org.ow2.asm:asm-commons:9.10.1'
     implementation 'org.ow2.asm:asm-tree:9.10.1'
     implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json-jvm:1.9.0'
+    implementation 'com.squareup.okhttp3:okhttp:5.4.0'
+    implementation 'io.reactivex:rxjava:1.3.8'
+    implementation 'org.jsoup:jsoup:1.19.1'
 }
 
 application {
     mainModule = 'fr.vriege.anilib.platform.desktopextensionhost'
     mainClass = 'fr.vriege.anilib.platform.desktopextensionhost.DesktopExtensionHostMain'
+    applicationDefaultJvmArgs = ['--add-modules=rxjava']
 }
 
 tasks.register('desktopExtensionHostSmoke', JavaExec) {
